force-app/main/default/objects/DML_Error__c/DML_Error__c.object-meta.xml
<CustomObject>
    <label>DML Error</label>
    <nameField>
        <label>DML Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DML Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>