force-app/main/default/objects/DML_Error__c/fields/DML_Error_Number__c.field-meta.xml
<CustomField>
    <fullName>DML_Error_Number__c</fullName>
    <description>Number of the error in the transaction</description>
    <inlineHelpText>Number of the error in the transaction</inlineHelpText>
    <label>DML Error Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>