force-app/main/default/objects/DML_Error__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Parent Error</description>
    <inlineHelpText>Parent Error</inlineHelpText>
    <label>Error</label>
    <referenceTo>Error__c</referenceTo>
    <relationshipLabel>DML Errors</relationshipLabel>
    <relationshipName>DML_Errors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>