force-app/main/default/objects/DML_Error__c/fields/Field_Names__c.field-meta.xml
<CustomField>
    <fullName>Field_Names__c</fullName>
    <description>e.getDmlFieldNames()</description>
    <inlineHelpText>e.getDmlFieldNames()</inlineHelpText>
    <label>Field Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>