force-app/main/default/objects/DML_Error__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>DMLException.getDMLMessage()</description>
    <inlineHelpText>DMLException.getDMLMessage()</inlineHelpText>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>