force-app/main/default/objects/DML_Error__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>ID of the individually failed record</description>
    <inlineHelpText>ID of the individually failed record</inlineHelpText>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>